--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Solicitar Ayuda</string>
-    <string name="menu_gallery">Actualizar Datos Personales</string>
+    <string name="menu_gallery">Actualizar Datos</string>
     <string name="menu_slideshow">Mis Mensajes</string>
     <string name="menu_tools">Actualizar Contactos</string>
     <string name="menu_share">Argegar Contactos</string>
@@ -56,7 +56,7 @@
     <string name="iniciarsesion">Inicio de Sesión</string>
 
     <string name="Cancelar_Actualizacion">Cancelar</string>
-    <string name="Actualiza_datos">Actualizar</string>
+    <string name="Actualiza_datos">Reestablecer</string>
 
     <string name="Cancelar_Confianza">Cancelar</string>
     <string name="Agregar_confianza">Agregar contacto</string>
