--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,13 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+
 
     <string name="menu_home">Solicitar Ayuda</string>
     <string name="menu_gallery">Actualizar Datos</string>
     <string name="menu_slideshow">Mis Mensajes</string>
     <string name="menu_tools">Actualizar Contactos</string>
-    <string name="menu_share">Argegar Contactos</string>
+    <string name="menu_share">Editar Contactos</string>
     <string name="menu_send">Send</string>
     <string name="menu_close">Cerrar sesión</string>
 
@@ -45,10 +45,10 @@
     <string name="privada">Privada</string>
     <string name="publica">Publica</string>
     <string name="Solicitar">Enviar</string>
-    <string name="asalto">Me acaban de asaltar, ayuda</string>
-    <string name="temblor">Estoy bajo los escombros, ayuda</string>
-    <string name="incendio">Hay un incendio en mi casa ayuda</string>
-    <string name="secuestro">Me estan secuestrando, ayuda</string>
+    <string name="asalto">■ Me acaban de asaltar, ayuda</string>
+    <string name="temblor">■ Estoy bajo los escombros, ayuda</string>
+    <string name="incendio">■ Hay un incendio en mi casa ayuda</string>
+    <string name="secuestro">■ Me estan secuestrando, ayuda</string>
     <string name="fail_register2">Fallo</string>
 
     <string name="welcome2">Bienvenido</string>
