Cambio en el nombre del boton de la pantalla de registrar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="menu_camera">Camara</string>
     <string name="gallery">Galeria</string>
     <string name="fail_register">Fallo al registrar al usuario</string>
-
+    <string name="action_change_in">Reestablecer</string>
 
     <string name="name">Nombre (s) *</string>
     <string name="Lastname">Apellidos *</string>
