--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="menu_gallery">Actualizar Datos</string>
     <string name="menu_slideshow">Mis Mensajes</string>
     <string name="menu_tools">Actualizar Contactos</string>
-    <string name="menu_share">Editar Contactos</string>
+    <string name="menu_share">Administrar Contactos</string>
     <string name="menu_send">Send</string>
     <string name="menu_close">Cerrar sesión</string>
 
@@ -34,7 +34,7 @@
     <string name="menu_camera">Camara</string>
     <string name="gallery">Galeria</string>
     <string name="fail_register">Fallo al registrar al usuario</string>
-    <string name="action_change_in">Reestablecer</string>
+    <string name="action_change_in">Restablecer</string>
 
     <string name="name">Nombre (s) *</string>
     <string name="Lastname">Apellidos *</string>
@@ -45,10 +45,11 @@
     <string name="privada">Privada</string>
     <string name="publica">Publica</string>
     <string name="Solicitar">Enviar</string>
-    <string name="asalto">■ Me acaban de asaltar, ayuda</string>
-    <string name="temblor">■ Estoy bajo los escombros, ayuda</string>
-    <string name="incendio">■ Hay un incendio en mi casa ayuda</string>
-    <string name="secuestro">■ Me estan secuestrando, ayuda</string>
+    <string name="asalto">■ Estoy bien</string>
+    <string name="asalto2">■ Se ha suscitado una situación de violencia cerca de mi ubicación. </string>
+    <string name="temblor">■ Me encuentro en una situación de emergencia. </string>
+    <string name="incendio">■ Se ha suscitado una situación de violencia cerca de mi ubicación.</string>
+    <string name="secuestro">■ Comunícate conmigo.</string>
     <string name="fail_register2">Fallo</string>
 
     <string name="welcome2">Bienvenido</string>
@@ -56,7 +57,7 @@
     <string name="iniciarsesion">Inicio de Sesión</string>
 
     <string name="Cancelar_Actualizacion">Cancelar</string>
-    <string name="Actualiza_datos">Reestablecer</string>
+    <string name="Actualiza_datos">Restablecer</string>
 
     <string name="Cancelar_Confianza">Cancelar</string>
     <string name="Agregar_confianza">Agregar contacto</string>
@@ -64,6 +65,6 @@
     <string name="Cancelar_Actualizacion_confianza">Cancelar</string>
     <string name="Actualiza_datos_confianza">Actualizar contacto</string>
 
-    <string name="parentesco">Parentesco *</string>
+    <string name="parentesco">Alias *</string>
 
 </resources>
