Mensajes, logo de la aplicación

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="privada">Privada</string>
     <string name="publica">Publica</string>
     <string name="Solicitar">Enviar</string>
-    <string name="asalto">■ Estoy bien</string>
+    <string name="asalto">■ Estoy cerca de </string>
     <string name="asalto2">■ Se ha suscitado una situación de violencia cerca de mi ubicación. </string>
     <string name="temblor">■ Me encuentro en una situación de emergencia. </string>
     <string name="incendio">■ Se ha suscitado una situación de violencia cerca de mi ubicación.</string>
